test/regress/2871_2.test
; Additional regression test for issue #2871
; Test that bare ((@)) without a preceding lot annotation is also rejected.

2020-06-22 * Bare ((@)) without lot
    Assets:Test               10.00 EUR ((@)) 1.30 USD
    Assets:Bank

test bal -> 1
__ERROR__
While parsing file "$FILE", line 5:
While parsing value expression:
  @

While parsing posting:
  Assets:Test               10.00 EUR ((@)) 1.30 USD
                            ^^^^^^^^^^^^^^^^^^^^^^^^
Error: Invalid char '@'
end test
